# ice-engine-3d

./: .gitignore  CMakeLists.txt  README.md  build.sh
CMake/: CompilerFlags.cmake
include/: stb_image.h
include/core/: Engine.h  Game.h  GameBlock.h  GameField.h  ShaderProgram.h  TimeManager.h  WindowGLFW.h
include/engine/: Camera.h  Engine.h  Game.h  GameObject.h  InputManager.h  Lights.h  Mesh.h  MeshManager.h  RenderEngine.h  ShaderProgram.h  Texture.h  TextureManager.h  TimeManager.h  WindowGLFW.h
include/gameplay/: 2  GameBall.h  GameBlock.h  GameData.h  GameEntry.h  GameField.h  GameMaster.h  GameSetup.h  PhysicEngine.h
include/utils/: Singleton.h  Uncopyable.h  constants.h  log.h  mathHelper.h
resources/tilemaps/: level1.gmap
shader/: cube.vert  phong_illu.frag
shaders/: phong_illu.frag
src/: glad.c  main.cpp
src/core/: Engine.cpp  Game.cpp  GameBlock.cpp  ShaderProgram.cpp  TimeManager.cpp  WindowGLFW.cpp
src/engine/: Engine.cpp  Game.cpp  InputManager.cpp  Mesh.cpp  MeshManager.cpp  RenderEngine.cpp  ShaderProgram.cpp  TextureManager.cpp  TimeManager.cpp  WindowGLFW.cpp
src/gameplay/: GameBall.cpp  GameBlock.cpp  GameData.cpp  GameEntry.cpp  GameField.cpp  GameMaster.cpp  PhysicEngine.cpp
